<resources>
    <string name="app_name">My Application</string>
    <string name="start_page_title0">相信自己----0</string>
    <string name="start_page_title1">相信自己----1</string>
    <string name="start_page_title2">相信自己----2</string>
    <!--login-->
    <string name="user_name">用户名:</string>
    <string name="user_psw">密码:</string>
    <string name="e_mail">Email:</string>
    <string name="remember_user_psw">记住用户名和密码</string>
    <string name="auto_login">自动登录</string>
    <string name="pls_input_legal_username">请输入已经注册成功的用户名</string>
    <string name="pls_input_psw_for_username">请输入与用户名匹配的密码</string>
    <string name="register_now">立即注册</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="sign_out">注销</string>
    <string name="retry">重试</string>
    <string name="forget_psw">忘记密码</string>
    <string name="start_use_app">开始体验</string>
    <string name="visitor">游客访问</string>
    <string name="pls_input_user_num_10">请输入10位以下数字</string>
    <string name="pls_input_psw_8_10">请输入8至10位密码</string>
    <string name="pls_input_email">请输入邮箱地址</string>

    <!-- drawer  -->
    <string name="drawer_open">打开drawer</string>
    <string name="drawer_close"> 关闭drawer</string>


    <!-- bottom tab-->
    <string name="tab_left">消息</string>
    <string name="tab_right">联系人</string>
    <!-- menu-->
    <string name="menu_more_add">加好友</string>
    <string name="menu_more_add_group">加群</string>
    <string name="hint_search">开始搜索吧！</string>


    <string name="hint_search_groups">输入 \'9525\' 可搜索所有群组</string>
    <string name="send">发送</string>


</resources>
